WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306607
Inset box-shadow incorrectly positioned on table cells with collapsed borders
https://bugs.webkit.org/show_bug.cgi?id=306607
Summary
Inset box-shadow incorrectly positioned on table cells with collapsed borders
Ahmad Saleem
Reported
2026-01-30 01:09:20 PST
It is to fix -
https://wpt.fyi/results/css/css-tables/box-shadow-001.html?label=experimental&label=master&aligned
since we are only browser failing and we are failing because we don't handle inset box-shadow for table-cell properly.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-01-30 01:09:28 PST
<
rdar://problem/169254286
>
Ahmad Saleem
Comment 2
2026-01-30 01:11:53 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57543
EWS
Comment 3
2026-02-16 12:37:55 PST
Committed
307661@main
(aade63473a3e): <
https://commits.webkit.org/307661@main
> Reviewed commits have been landed. Closing PR #57543 and removing active labels.
Ahmad Saleem
Comment 4
2026-02-26 20:02:38 PST
***
Bug 78215
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug