Inset box-shadow incorrectly positioned on table cells with collapsed borders https://bugs.webkit.org/show_bug.cgi?id=306607 rdar://169254286

Reviewed by Darin Adler.

This patch aligns WebKit with Gecko / Firefox and Blink / Chromium.

When painting inset box-shadows on table cells with collapsed borders,
we were positioning the shadow too far inward, exposing the background
color. This occurred because collapsed borders report half-widths through
borderTop()/borderLeft() etc., but BackgroundPainter expects the border
box to be at the outer edge when calculating inset shadow bounds.

The fix expands the paint rect by the half-widths before passing it to
BackgroundPainter for inset shadows. BackgroundPainter then subtracts
these half-widths to compute the inner edge, correctly positioning the
inset shadow at the true inner edge of the collapsed border.

* Source/WebCore/rendering/RenderTableCell.cpp:
(WebCore::RenderTableCell::paintBoxDecorations):
* LayoutTests/TestExpectations: Progression

Canonical link: https://commits.webkit.org/307661@main